add_subdirectory(binary_to_compressed_c)
find_program(GLSLANG_EXECUTABLE NAMES glslangValidator glslang-standalone)
if (NOT GLSLANG_EXECUTABLE)
	macro(find_host_package)
		find_package(${ARGN})
	endmacro()
	add_subdirectory(glslang)
	add_executable(glslangValidator ALIAS glslang-standalone)
else()
	add_executable(glslangValidator IMPORTED GLOBAL)
	set_property(TARGET glslangValidator PROPERTY IMPORTED_LOCATION ${GLSLANG_EXECUTABLE})
endif()
