include(CheckCCompilerFlag)
include(CheckCXXCompilerFlag)

set(CMAKE_C_FLAGS "")

check_c_compiler_flag("-Wno-sign-compare" C_NO_SIGN_COMPARE)
if (C_NO_SIGN_COMPARE)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-sign-compare")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-sign-compare")
endif()

check_c_compiler_flag("-Wno-shadow" C_NO_SHADOW)
if (C_NO_SHADOW)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-shadow")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-shadow")
endif()

check_c_compiler_flag("-Wno-cast-qual" C_NO_CAST_QUAL)
if (C_NO_CAST_QUAL)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-cast-qual")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-cast-qual")
endif()

if (USE_STACKTRACES)
	add_subdirectory(backward)
endif()
add_subdirectory(benchmark)
add_subdirectory(glm)
add_subdirectory(stb_image)
add_subdirectory(lua54)
add_subdirectory(meshoptimizer)
add_subdirectory(lzfse)
add_subdirectory(gtest)
set(SDL_CMAKE_DEBUG_POSTFIX "" CACHE STRING "Name suffix for debug builds" FORCE)
set(SDL2_DISABLE_INSTALL ON CACHE BOOL "" FORCE)
set(SDL2_DISABLE_UNINSTALL ON CACHE BOOL "" FORCE)
if (NOT USE_LIBS_FORCE_LOCAL)
	find_package(PkgConfig)
	if (PkgConfig_FOUND)
		pkg_check_modules(SDL2 sdl2)
		if (SDL2_FOUND)
			message(STATUS "SDL system wide installation found")
		endif()
	else()
		message(STATUS "Pkg-config not found")
	endif()
	if (NOT SDL2_FOUND)
		find_package(SDL2 GLOBAL)
	endif()
endif()
if (SDL2_FOUND OR EMSCRIPTEN)
	add_library(sdl2 INTERFACE)
	target_include_directories(sdl2 INTERFACE ${SDL2_INCLUDE_DIRS})
	target_link_libraries(sdl2 INTERFACE ${SDL2_LINK_LIBRARIES})
	add_library(SDL2::SDL2 ALIAS sdl2)
else()
	set(SDL_STATIC_ENABLED_BY_DEFAULT ON CACHE BOOL "" FORCE)
	set(SDL_SHARED_ENABLED_BY_DEFAULT OFF CACHE BOOL "" FORCE)
	set(SDL_TEST_ENABLED_BY_DEFAULT OFF CACHE BOOL "" FORCE)
	set(SDL_FORCE_STATIC_VCRT ON CACHE BOOL "" FORCE)
	add_subdirectory(sdl2)
	add_library(sdl2 INTERFACE)
	target_link_libraries(sdl2 INTERFACE SDL2::SDL2main SDL2-static)
endif()
set(SDL_PCH
	<SDL.h>
	<SDL_stdinc.h>
	<SDL_atomic.h>
)
target_precompile_headers(sdl2 INTERFACE ${SDL_PCH})

add_subdirectory(simplecpp)
add_subdirectory(yocto)

if (NOT USE_LIBS_FORCE_LOCAL)
	find_package(JPEG GLOBAL)
endif()
if (NOT JPEG_FOUND)
	add_subdirectory(jpeg)
	add_library(JPEG::JPEG ALIAS jpeg)
	set(JPEG_FOUND 1)
endif()
set(USE_LIBJPEG ${JPEG_FOUND} CACHE BOOL "Use libjpeg for jpeg saving" FORCE)
