include(CheckCCompilerFlag)
include(CheckCXXCompilerFlag)

set(CMAKE_C_FLAGS "")

check_c_compiler_flag("-Wno-sign-compare" C_NO_SIGN_COMPARE)
if (C_NO_SIGN_COMPARE)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-sign-compare")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-sign-compare")
endif()

check_c_compiler_flag("-Wno-shadow" C_NO_SHADOW)
if (C_NO_SHADOW)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-shadow")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-shadow")
endif()

check_c_compiler_flag("-Wno-cast-qual" C_NO_CAST_QUAL)
if (C_NO_CAST_QUAL)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-cast-qual")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-cast-qual")
endif()

if (USE_STACKTRACES)
	add_subdirectory(backward)
endif()
if (USE_BENCHMARKS)
	add_subdirectory(benchmark)
endif()
add_subdirectory(glm)
add_subdirectory(stb_image)
add_subdirectory(lua54)
add_subdirectory(tinyxml2)
add_subdirectory(cjson)
add_subdirectory(meshoptimizer)
add_subdirectory(lzfse)
add_subdirectory(minlzma)
if (UNITTESTS)
	add_subdirectory(gtest)
endif()
add_subdirectory(simplecpp)
if (USE_YOCTO)
	add_subdirectory(yocto)
endif()

find_package(PkgConfig)
if (NOT PkgConfig_FOUND)
message(STATUS "PkgConfig not found")
endif()

if (NOT USE_LIBS_FORCE_LOCAL)
	if (PkgConfig_FOUND)
		pkg_check_modules(SDL3 sdl3)
		if (SDL3_FOUND)
			message(STATUS "SDL3 system wide installation found")
		endif()
	endif()
	if (NOT SDL3_FOUND)
		find_package(sdl3)
	endif()
else()
	set(SDL3_FOUND FALSE)
endif()
if (SDL3_FOUND OR EMSCRIPTEN)
	add_library(sdl3 INTERFACE)
	target_include_directories(sdl3 INTERFACE ${SDL3_INCLUDE_DIRS})
	target_link_libraries(sdl3 INTERFACE ${SDL3_LINK_LIBRARIES})
	add_library(SDL3::SDL3 ALIAS sdl3)
else()
	set(SDL_INSTALL OFF CACHE BOOL "" FORCE)
	set(SDL_UNINSTALL OFF CACHE BOOL "" FORCE)
	set(SDL_SHARED OFF CACHE BOOL "" FORCE)
	set(SDL_STATIC ON CACHE BOOL "" FORCE)
	set(SDL_TEST_LIBRARY OFF CACHE BOOL "" FORCE)
	add_subdirectory(sdl3)
	add_library(sdl3 INTERFACE)
	target_link_libraries(sdl3 INTERFACE SDL3::SDL3-static)
endif()
set(SDL_PCH
	<SDL3/SDL.h>
	<SDL3/SDL_stdinc.h>
	<SDL3/SDL_atomic.h>
)
target_precompile_headers(sdl3 INTERFACE ${SDL_PCH})
