# The dependency order here is relevant if you e.g. have modules with files attached
# If you don't include the module with files before its dependent modules, then the
# files will not get copied

check_cxx_compiler_flag("-Wdocumentation" COMPILER_SUPPORTS_WDOCUMENTATION)
if (COMPILER_SUPPORTS_WDOCUMENTATION)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wdocumentation -Wno-documentation-unknown-command")
endif()

add_subdirectory(core)
add_subdirectory(io)
add_subdirectory(json)
add_subdirectory(command)
add_subdirectory(app)
add_subdirectory(color)
add_subdirectory(commonlua)
add_subdirectory(math)
add_subdirectory(util)
add_subdirectory(http)
add_subdirectory(image)
add_subdirectory(video)
add_subdirectory(metric)
add_subdirectory(network)
add_subdirectory(noise)
add_subdirectory(render)
add_subdirectory(ui)
add_subdirectory(palette)
add_subdirectory(voxel)
add_subdirectory(voxelpathtracer)
add_subdirectory(voxelfont)
add_subdirectory(voxelutil)
add_subdirectory(scenegraph)
add_subdirectory(memento)
add_subdirectory(voxelformat)
add_subdirectory(voxelgenerator)
add_subdirectory(voxelcollection)
add_subdirectory(voxelrender)
add_subdirectory(voxelui)
add_subdirectory(testcore)
